--- a/main.css
+++ b/main.css
@@ -394,6 +394,13 @@ textarea {
 
 @media screen and (min-width: 360px) {
     h1 {
+        font-size: 1.6rem;
+        transition: .3s;
+    }
+}
+
+@media screen and (min-width: 375px) {
+    h1 {
         font-size: 1.8rem;
         transition: .3s;
     }
@@ -403,7 +410,7 @@ textarea {
         height: 38px;
         transition: .3s;
     }
-
+    
     .hero-btn-text {
         color: #fff;
         font-size: 1.1rem;
